# soarsdk

./: README.md  pyproject.toml  settings.json
.devcontainer/: Dockerfile  devcontainer.json
src/soarsdk/: client.py  exceptions.py  objects.py
tests/: sample_objects.json  test_PhantomClient.py
