[build-system]
requires = ["wheel", 'setuptools']
[project]
name = "soarsdk"
version = "1.0.1"
description = "API Wrapper and Objects for Splunk SOAR"
readme = "README.md"
license = { file= "license.txt"}
authors = [{ name = "Tyler Chuba", email = "tylerchuba@gmail.com" }]
requires-python = ">=3.9"
dependencies = ["requests", "colorama"]

[project.urls]
repository = "https://github.com/tylerjchuba/soarsdk" 
